--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,7 +17,7 @@ body{
   margin:0px;
   padding:0px;
   font-family: $font;
-  height: 100%;
+
   width: 100%;
   overflow: scroll;
 }
@@ -29,14 +29,16 @@ li{
 }
 
 #home{
-  margin-top:60px;
+  margin-top:25vh;
+}
+
+#experience{
+  margin-bottom: 100px;
 }
 
 .page{
-
-  height: 70vh;
+  margin-top:100px;
   width: 100%;
-  margin:0 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,7 +46,7 @@ li{
   .body{
 
     .group{
-      width: 320px;
+      width: 100%;
       display: flex;
       flex-direction: column;
       justify-content: center;
